[tool.poetry]
name = "lvmopstools"
version = "0.2.0"
description = "LVM tools and utilities for operations"
authors = ["José Sánchez-Gallego <gallegoj@uw.edu>"]
license = "BSD-3-Clause"
readme = "README.md"
homepage = "https://github.com/sdss/lvmopstools"
repository = "https://github.com/sdss/lvmopstools"
documentation = "https://lvmopstools.readthedocs.org"
keywords = ["astronomy", "software"]
classifiers = [
    "Intended Audience :: Science/Research",
    "Natural Language :: English",
    "Operating System :: OS Independent",
	"Programming Language :: Python :: 3.10",
	"Programming Language :: Python :: 3.11",
	"Programming Language :: Python :: 3.12",
    "Topic :: Documentation :: Sphinx",
    "Topic :: Software Development :: Libraries :: Python Modules"
]
packages = [
    { include = "lvmopstools", from = "src" }
]
include = ["src/lvmopstools/*.yaml"]

[tool.poetry.scripts]
lvmtools = 'lvmopstools.__main__:lvmopstools'

[tool.poetry.dependencies]
python = "^3.10"
sdsstools = "^1.3.1"
sdss-clu = "^2.2.3"
astropy = "^6.0.0"
click = "^8.1.7"
pyds9 = {version = "^1.8.1", optional = true}

[tool.poetry.group.dev.dependencies]
ipython = ">=8.0.0"
pytest = ">=5.2.2"
pytest-asyncio = ">=0.10.0"
pytest-cov = ">=2.8.1"
pytest-mock = ">=1.13.0"
pytest-sugar = ">=0.9.2"
coverage = {version = ">=5.0", extras = ["toml"]}
ipdb = ">=0.12.3"
rstcheck = ">=3.3.1"
black = ">=20.8b1"
Sphinx = ">=4.0.0"
furo = ">=2021.9.22"
sphinx-copybutton = ">=0.4.0"
sphinx-click = ">=3.0.1"
myst-parser = ">=2.0.0"
nox = ">=2021.6.12"
sphinx-autobuild = ">=2021.3.14"
sphinx-autodoc-typehints = "^1.23.2"
ruff = ">=0.1.0"
pandas-stubs = "^2.1.4.231227"

[tool.poetry.extras]
ds9 = ["pyds9"]

[tool.black]
line-length = 88
target-version = ['py312']
fast = true

[tool.ruff]
line-length = 88
target-version = 'py312'
select = ["E", "F", "I"]
unfixable = ["F841"]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F403", "E402", "F401"]

[tool.ruff.isort]
known-first-party = ["lvmopstools"]
lines-after-imports = 2
section-order = ["future", "standard-library", "typing", "third-party", "sdss", "first-party", "local-folder"]

[tool.ruff.isort.sections]
typing = ["typing"]
sdss = ["sdsstools", "clu"]

[tool.pytest.ini_options]
addopts = "--cov lvmopstools --cov-report xml --cov-report html --cov-report term -W ignore"
asyncio_mode = "auto"

[tool.coverage.run]
branch = true
include = ["src/lvmopstools/*"]
omit = [
    "src/lvmopstools/__main__.py",
    "src/lvmopstools/ds9.py",
    "src/lvmopstools/utils.py"
]

[tool.coverage.report]
exclude_lines = [
    "if TYPE_CHECKING:",
    "# pragma: no cover",
    "@abc.abstractmethod"
]

[build-system]
requires = ["poetry-core>=1.1.0"]
build-backend = "poetry.core.masonry.api"
