[project]
name = "lvmopstools"
version = "0.3.9"
description = "LVM tools and utilities for operations"
authors = [
    { name = "José Sánchez-Gallego", email = "gallegoj@uw.edu" }
]
license = { text = "BSD-3-Clause" }
readme = "README.md"
requires-python = ">=3.10,<4"

dependencies = [
    "sdsstools>=1.8.2",
    "sdss-clu>=2.2.7",
    "sdss-drift>=1.2.0",
    "asyncudp>=0.11.0",
]

[project.optional-dependencies]
ds9 = [ "pyds9>=1.8.1" ]

[project.urls]
Homepage = "https://github.com/sdss/lvmopstools"
Repository = "https://github.com/sdss/lvmopstools"
Documentation = "https://lvmopstools.readthedocs.org"

[project.scripts]
lvmopstools = "lvmopstools.__main__:lvmopstools"

[tool.uv]
package = true
dev-dependencies = [
    "ipython>=8.0.0",
    "doc8>=0.8.0",
    "pytest>=5.2.2",
    "pytest-asyncio>=0.10.0",
    "pytest-cov>=2.8.1",
    "pytest-mock>=1.13.0",
    "pytest-sugar>=0.9.2",
    "coverage[toml]>=5.0",
    "ipdb>=0.12.3",
    "rstcheck>=3.3.1",
    "Sphinx>=4.0.0",
    "furo>=2021.9.22",
    "sphinx-copybutton>=0.4.0",
    "sphinx-click>=3.0.1",
    "sphinx-jsonschema>=1.16.11",
    "myst-parser>=2.0.0",
    "nox>=2021.6.12",
    "sphinx-autobuild>=2021.3.14",
    "sphinx-autodoc-typehints>=1.23.2",
    "ruff>=0.6.1",
]

[tool.ruff]
line-length = 88
target-version = 'py312'

[tool.ruff.lint]
select = ["E", "F", "I"]
unfixable = ["F841"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F403", "E402", "F401"]

[tool.ruff.lint.isort]
known-first-party = ["lvmopstools"]
lines-after-imports = 2
section-order = ["future", "standard-library", "typing", "third-party", "sdss", "first-party", "local-folder"]

[tool.ruff.lint.isort.sections]
typing = ["typing"]
sdss = ["sdsstools", "clu", "drift"]

[tool.pytest.ini_options]
addopts = "--cov lvmopstools --cov-report xml --cov-report html --cov-report term -W ignore"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = 'function'

[tool.coverage.run]
branch = true
include = ["src/lvmopstools/*"]
omit = [
    "src/lvmopstools/__main__.py",
    "src/lvmopstools/clu.py",
    "src/lvmopstools/ds9.py",
    "src/lvmopstools/utils.py",
    "src/lvmopstools/devices/specs.py",
    "src/lvmopstools/devices/nps.py"
]

[tool.coverage.report]
exclude_lines = [
    "if TYPE_CHECKING:",
    "# pragma: no cover",
    "@abc.abstractmethod"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
only-include = ["src/lvmopstools"]
