[project]
name = "lvmopstools"
version = "0.5.7"
description = "LVM tools and utilities for operations"
authors = [
    { name = "José Sánchez-Gallego", email = "gallegoj@uw.edu" }
]
license = { text = "BSD-3-Clause" }
readme = "README.md"
requires-python = ">=3.10,<4"

dependencies = [
    "sdsstools>=1.9.1",
    "sdss-clu>=2.4.2",
    "sdss-drift>=1.2.0",
    "asyncudp>=0.11.0",
    "httpx>=0.27.2",
    "polars>=1.13.0",
    "typing-extensions>=4.12.2",
    "aio-pika>=9.5.3",
    "pydantic>=2.10.3",
    "strenum>=0.4.15",
    "aiohttp>=3.11.11",
    "jinja2>=3.1.5",
    "cachetools>=5.5.0",
    "aiocache>=0.12.3"
]

[project.optional-dependencies]
ds9 = [ "pyds9>=1.8.1" ]
kubernetes = [ "kubernetes>=31.0.0" ]
influxdb = [ "influxdb-client[async]>=1.47.0" ]
ephemeris = [
    "astropy>=6.0.0; python_version<'3.11'",
    "astropy>=7.0.0; python_version>='3.11'",
    "astroplan>=0.10.1",
]
slack = [
    "slack-sdk>=3.34.0",
]
all = [
    "kubernetes>=31.0.0",
    "influxdb-client[async]>=1.47.0",
    "astropy>=6.0.0; python_version<'3.11'",
    "astropy>=7.0.0; python_version>='3.11'",
    "astroplan>=0.10.1",
    "slack-sdk>=3.34.0",
]

[project.urls]
Homepage = "https://github.com/sdss/lvmopstools"
Repository = "https://github.com/sdss/lvmopstools"
Documentation = "https://lvmopstools.readthedocs.org"

[project.scripts]
lvmopstools = "lvmopstools.__main__:lvmopstools"

[dependency-groups]
dev = [
    "ipython>=8.0.0",
    "doc8>=0.8.0",
    "pytest>=5.2.2",
    "pytest-asyncio>=0.10.0",
    "pytest-cov>=2.8.1",
    "pytest-mock>=1.13.0",
    "pytest-sugar>=0.9.2",
    "coverage[toml]>=5.0",
    "ipdb>=0.12.3",
    "rstcheck>=3.3.1",
    "Sphinx>=4.0.0",
    "furo>=2021.9.22",
    "sphinx-copybutton>=0.4.0",
    "sphinx-click>=3.0.1",
    "sphinx-jsonschema>=1.16.11",
    "myst-parser>=2.0.0",
    "nox>=2021.6.12",
    "sphinx-autobuild>=2021.3.14",
    "sphinx-autodoc-typehints>=1.23.2",
    "ruff>=0.6.1",
    "pytest-rabbitmq>=3.1.1",
    "pytest-env>=1.1.5",
]

[tool.ruff]
line-length = 88
target-version = 'py312'

[tool.ruff.lint]
select = ["E", "F", "I"]
unfixable = ["F841"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F403", "E402", "F401"]

[tool.ruff.lint.isort]
known-first-party = ["lvmopstools"]
lines-after-imports = 2
section-order = ["future", "standard-library", "typing", "third-party", "sdss", "first-party", "local-folder"]

[tool.ruff.lint.isort.sections]
typing = ["typing"]
sdss = ["sdsstools", "clu", "drift"]

[tool.pytest.ini_options]
addopts = "--cov lvmopstools --cov-report xml --cov-report html --cov-report term -W ignore --capture=tee-sys"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = 'function'

[tool.pytest_env]
AIOCACHE_DISABLE = "1"
SLACK_API_TOKEN = "test-token"

[tool.coverage.run]
branch = true
include = ["src/lvmopstools/*"]
omit = [
    "src/lvmopstools/__main__.py",
    "src/lvmopstools/clu.py",
    "src/lvmopstools/ds9.py",
    "src/lvmopstools/kubernetes.py",
    "src/lvmopstools/influxdb.py",
    "src/lvmopstools/devices/specs.py",
    "src/lvmopstools/devices/nps.py"
]

[tool.coverage.report]
exclude_lines = [
    "if TYPE_CHECKING:",
    "# pragma: no cover",
    "@abc.abstractmethod"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
only-include = ["src/lvmopstools"]

[tool.hatch.build.targets.wheel]
packages = ["src/lvmopstools"]
